Fix loading display on safari mobile

--- a/src/components/LoadingPage/LoadingPage.module.css
+++ b/src/components/LoadingPage/LoadingPage.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background-color: white;
   overflow: hidden;
 }
